--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,16 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.getstarted.SetUp"
+            android:theme="@style/AppTheme"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+            </intent-filter>
+
+        </activity>
+
         <activity
             android:name=".ui.splash.SplashScreen"
             android:theme="@style/SplashScreen"
@@ -27,7 +37,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
 
